cmd: initial implementation of bootmap
Provide command to read Leica System 1600 bootmap-switch. The command
adds the address and size of bootmap to the environment based of the
passed address (in hexadecimal format) of bootmap-switch.

Signed-off-by: Thomas Haemmerle <thomas.haemmerle@leica-geosystems.com>

--- a/cmd/Kconfig
+++ b/cmd/Kconfig
@@ -1595,6 +1595,12 @@ config CMD_BOOTCOUNT
 	  Enable the bootcount command, which allows interrogation and
 	  reset of the bootcounter.
 
+config CMD_BOOTMAP
+	bool "bootmap"
+	help
+	  Add address and size of Leica System 1600 bootmap to environment based
+	  on boot-map switch.
+
 config CMD_BSP
 	bool "Enable board-specific commands"
 	help
