--- a/configs/imx8mm_ap20_fspi_defconfig
+++ b/configs/imx8mm_ap20_fspi_defconfig
@@ -26,6 +26,9 @@ CONFIG_SPL_FIT_GENERATOR="arch/arm/mach-imx/mkimage_fit_atf.sh"
 CONFIG_OF_SYSTEM_SETUP=y
 CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=arch/arm/mach-imx/imx8m/imximage-8mm-lpddr4-fspi.cfg"
 CONFIG_BOOTDELAY=1
+CONFIG_AUTOBOOT_KEYED=y
+CONFIG_AUTOBOOT_PROMPT="Autobooting in %d seconds, press \"lll\" to stop\n"
+CONFIG_AUTOBOOT_STOP_STR="lll"
 CONFIG_DEFAULT_FDT_FILE="imx8mm-ap20.dtb"
 CONFIG_BOARD_LATE_INIT=y
 CONFIG_ARCH_MISC_INIT=y
