configs: imx8mm-ap20: drop storing environment in eMMC
Always start u-boot with default environment.

Signed-off-by: Thomas Haemmerle <thomas.haemmerle@leica-geosystems.com>

--- a/configs/imx8mm_ap20_defconfig
+++ b/configs/imx8mm_ap20_defconfig
@@ -10,8 +10,6 @@ CONFIG_SYS_I2C_MXC_I2C1=y
 CONFIG_SYS_I2C_MXC_I2C2=y
 CONFIG_SYS_I2C_MXC_I2C3=y
 CONFIG_SYS_I2C_MXC_I2C4=y
-CONFIG_ENV_SIZE=0x1000
-CONFIG_ENV_OFFSET=0x400000
 CONFIG_DM_GPIO=y
 CONFIG_TARGET_IMX8MM_VAR_DART=y
 CONFIG_SPL_MMC_SUPPORT=y
@@ -64,7 +62,7 @@ CONFIG_CMD_FS_GENERIC=y
 CONFIG_CMD_BOOTMAP=y
 CONFIG_OF_CONTROL=y
 CONFIG_DEFAULT_DEVICE_TREE="imx8mm-var-dart-ap20"
-CONFIG_ENV_IS_IN_MMC=y
+CONFIG_ENV_IS_NOWHERE=y
 CONFIG_SYS_RELOC_GD_ENV_ADDR=y
 CONFIG_ENV_VARS_UBOOT_RUNTIME_CONFIG=y
 CONFIG_NET_RANDOM_ETHADDR=y
