--- a/configs/imx8mm_ap20_defconfig
+++ b/configs/imx8mm_ap20_defconfig
@@ -123,3 +123,4 @@ CONFIG_USB_GADGET_PRODUCT_NUM=0xa4a5
 CONFIG_CI_UDC=y
 CONFIG_SDP_LOADADDR=0x40400000
 CONFIG_OF_LIBFDT_OVERLAY=y
+CONFIG_LEICA_CMD_MCU_COM=y
